--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,19 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>React Typescript Webpack</title>
-</head>
-<body>
-<!-- React app root element -->
-<div id="root"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="manifest" href="manifest.json" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>Jc Fest Helper - Кальянный хелпер на фестивале</title>
+    <script
+      async
+      src="https://unpkg.com/pwacompat"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- React app root element -->
+    <div id="root"></div>
+  </body>
 </html>
